# pdfconv

./: .gitignore  README.md  pdf2docx_app.py  pdf2docx_app.spec  pyproject.toml  requirements.txt  run.bat  run.sh
PDF conversion tool design/design_handoff_pdf_converter/: PDF Converter.dc.html  README.md
docs/superpowers/plans/: 2026-06-23-markitall-v2.md
docs/superpowers/specs/: 2026-06-23-markitdown-universal-converter-mcp-design.md  2026-06-23-production-cross-platform-design.md
pdfconv/: __init__.py  __main__.py  audit.py  cli.py  config.py  engine.py  gui.py  icons.py  logsetup.py  platform_utils.py  theme.py
pdfconv/assets/: icon.icns
tests/: test_engine.py
tools/: make_icons.py
